CHANGES IN VERSION 1.11.1
-------------------------
 o new pwiz checkout [2014-04-24 Thu]

CHANGES IN VERSION 1.11.0
-------------------------
 o new devel version 

CHANGES IN VERSION 1.10.0
-------------------------
 o stable version for Bioc 2.14

CHANGES IN VERSION 1.9.8
------------------------
 o Pointing to the relevant wiki page in the Rcpp compiler/linker
   warning [2014-04-03 Thu]

CHANGES IN VERSION 1.9.7
------------------------
 o modify to new biocViews to DESCRIPTION file (s.arora)

CHANGES IN VERSION 1.9.6
------------------------
 o import all of Rcpp to avoid warnings in reverse dependencies <2014-02-14 Fri>

CHANGES IN VERSION 1.9.3
------------------------
 o fix a string in ramp.cpp to enable compilation on clang-3.4

CHANGES IN VERSION 1.9.2
------------------------
 o version bump for Rcpp 0.10.6 <2013-10-30 Wed> 

CHANGES IN VERSION 1.9.1
------------------------
 o moved vignettes to /vignettes <2013-10-17 Thu>

CHANGES IN VERSION 1.7.4
------------------------
 o version bump for Rcpp 0.10.5 <2013-10-02 Wed>

CHANGES IN VERSION 1.7.3
------------------------
 o Fix a compile error with the clang-3.3 compiler

CHANGES IN VERSION 1.7.2
------------------------
 o updated Rcpp number mismatch warning to include versions <2013-08-01 Thu>

CHANGES IN VERSION 1.7.1
------------------------
 o version bump for Rcpp 0.10.4

CHANGES IN VERSION 1.5.9
------------------------
 o version bump for Rcpp 0.10.3

CHANGES IN VERSION 1.5.8
------------------------
 o version bump for Rcpp 0.10.2

CHANGES IN VERSION 1.5.7
------------------------
 o only load Rcpp modules after checking for Rcpp 
   version conflict (DT)

CHANGES IN VERSION 1.5.6
------------------------
 o Explicitely call utils::packageVersion() to avoid warning (SN) <2012-12-15 Sat>

CHANGES IN VERSION 1.5.5
------------------------a
 o Added utils to Depends (SN) <2012-12-14 Fri>

CHANGES IN VERSION 1.5.4
------------------------
 o requiring Rcpp (>= 0.10.1) LG <2012-12-05 Wed>