@@ -166,7 +166,7 @@ void RAMPAdapter::Impl::getScanHeader(size_t index, ScanHeaderStruct& result, bo
       }
     }
 
-    result.filterLine = filterLine;
+    result.filterLine = filterLine.c_str();
 
 
 
