@@ -1,4 +1,3 @@
-// $Id: ramp_base64.cpp 2359 2010-11-09 23:01:39Z chambm $
 // base64 decode optimized using table lookup 
 // Copyright (C) 2005 Insilicos LLC All Rights Reserved
 // bpratt 10-5-05
