@@ -1,6 +1,10 @@
 CHANGES IN VERSION 1.11.1
 -------------------------
  o new pwiz checkout [2014-04-24 Thu]
+ o fixing building issue and segfault using KK's code [2014-05-21 Wed]
+ o removed DUP=FALSE [2014-05-21 Wed]
+ o added inst/[script/extdata] with code/rda for reproducibility
+   [2014-05-21 Wed]
 
 CHANGES IN VERSION 1.11.0
 -------------------------
